objects/LaavTrainingObj__c.object
<CustomObject>
    <description>Adding some description for a second time.</description>
    <fields>
        <fullName>Field_update_1__c</fullName>
        <description>testing</description>
        <label>Field update 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_update_2__c</fullName>
        <label>Field update 2</label>
        <picklist>
            <picklistValues>
                <fullName>Hi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hello</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>How are you</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field_update_4__c</fullName>
        <label>Field update 4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TextField__c</fullName>
        <label>TextField</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>LaavTrainingObj</label>
    <nameField>
        <label>LaavTrainingObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LaavTrainingObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>